Add styles and animations

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,53 +7,56 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.container {
+body {
     background: rgb(249,63,251);
     background: radial-gradient(circle, rgba(249,63,251,1) 0%, rgb(32, 108, 238) 100%);
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.container {
+    font-size: 16px;
+    width: 90vw;
+    max-width: 37em;
+    padding: 3em 1.8em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(64, 64, 64, 0.4);
+    border-radius: 0.6em;
 }
 .search {
-    background-color: rgba(64, 64, 64, 0.4);
-    backdrop-filter: blur(95%);
-    width: 600px;
-    padding: 30px 0;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    
+    display: grid;
+    grid-template-columns: 9fr 3fr;
+    gap: 1.2em;
+
+        &__button, &__input {
+            font-size: 1.2em;
+            outline: none;
+            border-radius: 0.3em;
+            
+        }
+
 		&__input {
             background-color: transparent;
-            border: 1px solid white;
-            outline: none;
-            color: white;
-            font-weight: 500;
-            font-size: 21px;
-            border-radius: 5px;
-            padding: 12px;
-            text-transform: uppercase;
+            border: 1px solid #a0a0a0;
+            color: #fff;
+            padding: 0.7em;
+
+            &:focus {
+                border-color: #fff;
+            }
 
             &::placeholder {
-                color: rgba(255, 255, 255, 0.573);
+                color: #bdbdbd;
             }
 		}
 
-		// .search__button
-
 		&__button {
-            padding: 12px 20px;
-            font-size: 21px;
-            height: 100%;
+            background-color: #ffff00;
             border: none;
-            background-color:  #00f4ff;
-            color: #000;
-            border-radius: 5px;
+            cursor: pointer;
             
-
             &:hover {
                 background-color:  #007bff;
                 color: white;
@@ -61,5 +64,116 @@
             }
 		}
 }
+
 .result {
+
+    &__main {
+        animation-name: fadeIn;
+        animation-delay: 0.1s;
+        animation-duration: 0.5s;
+        animation-fill-mode:forwards;
+        opacity: 0;
+        scale: 0;
+        position: relative;
+        display: grid;
+        grid-template-columns: 4fr 8fr;
+        color: white;
+        margin-top: 1.7em;
+    }
+
+    &__img {
+        width: 100%;
+    }
+
+    &__name {
+        text-align: center;
+        font-size: 1.5em;
+        font-weight: 600;
+
+    }
+
+    &__est {
+        display: flex;
+        gap: 0.6em;
+        align-items: center;
+        justify-content: center;
+        margin: 0.6em 0 0.9em 0;
+        
+    }
+
+    .est {
+        &-img {
+            color: #ffff00;
+            font-size: 1.1em;
+            
+        }
+
+        &-text {
+            display: inline-block;
+            font-size: 1.1em;
+            font-weight: 500;
+        }
+    }
+    
+}
+
+.details {
+    display: flex;
+    font-size: 1em;
+    gap: 1em;
+    justify-content: center;
+    color: #e0e0e0;
+    margin: 0.6em 0;
+    font-weight: 300;
+}
+.genre {
+    display: flex;
+    justify-content: space-around;
+
+    &__item {
+        border: 2px solid #a0a0a0b2;
+        font-size: 0.8em;
+        padding: 0.4em 1.6em;
+        border-radius: 0.3em;
+    }
+}
+.plot {
+    text-align: justify;
+    margin-top: 0.8em;
+}
+.cast {
+    margin-top: 0.8em;
+    text-align: justify;
+
+}
+
+.msg {
+    margin: 1em 0 0 0;
+    text-align: center;
+    color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        font-size: 14px;
+    }
+
+    .result__main {
+        grid-template-columns: 1fr;
+    }
+
+    .result__img {
+        margin: auto;
+        width: auto;
+        max-height: 12em;
+    }
+
+    
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        scale: 1;
+    }
 }
