--- a/styles/main.css
+++ b/styles/main.css
@@ -6,51 +6,149 @@
   font-family: "Poppins", sans-serif;
 }
 
-.container {
+body {
   background: rgb(249, 63, 251);
   background: radial-gradient(circle, rgb(249, 63, 251) 0%, rgb(32, 108, 238) 100%);
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+
+.container {
+  font-size: 16px;
+  width: 90vw;
+  max-width: 37em;
+  padding: 3em 1.8em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(64, 64, 64, 0.4);
+  border-radius: 0.6em;
 }
 
 .search {
-  background-color: rgba(64, 64, 64, 0.4);
-  backdrop-filter: blur(95%);
-  width: 600px;
-  padding: 30px 0;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
+  display: grid;
+  grid-template-columns: 9fr 3fr;
+  gap: 1.2em;
+}
+.search__button, .search__input {
+  font-size: 1.2em;
+  outline: none;
+  border-radius: 0.3em;
 }
 .search__input {
   background-color: transparent;
-  border: 1px solid white;
-  outline: none;
-  color: white;
-  font-weight: 500;
-  font-size: 21px;
-  border-radius: 5px;
-  padding: 12px;
-  text-transform: uppercase;
+  border: 1px solid #a0a0a0;
+  color: #fff;
+  padding: 0.7em;
+}
+.search__input:focus {
+  border-color: #fff;
 }
 .search__input::placeholder {
-  color: rgba(255, 255, 255, 0.573);
+  color: #bdbdbd;
 }
 .search__button {
-  padding: 12px 20px;
-  font-size: 21px;
-  height: 100%;
+  background-color: #ffff00;
   border: none;
-  background-color: #00f4ff;
-  color: #000;
-  border-radius: 5px;
+  cursor: pointer;
 }
 .search__button:hover {
   background-color: #007bff;
   color: white;
   transition: 0.4s;
+}
+
+.result__main {
+  animation-name: fadeIn;
+  animation-delay: 0.1s;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+  scale: 0;
+  position: relative;
+  display: grid;
+  grid-template-columns: 4fr 8fr;
+  color: white;
+  margin-top: 1.7em;
+}
+.result__img {
+  width: 100%;
+}
+.result__name {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 600;
+}
+.result__est {
+  display: flex;
+  gap: 0.6em;
+  align-items: center;
+  justify-content: center;
+  margin: 0.6em 0 0.9em 0;
+}
+.result .est-img {
+  color: #ffff00;
+  font-size: 1.1em;
+}
+.result .est-text {
+  display: inline-block;
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.details {
+  display: flex;
+  font-size: 1em;
+  gap: 1em;
+  justify-content: center;
+  color: #e0e0e0;
+  margin: 0.6em 0;
+  font-weight: 300;
+}
+
+.genre {
+  display: flex;
+  justify-content: space-around;
+}
+.genre__item {
+  border: 2px solid rgba(160, 160, 160, 0.6980392157);
+  font-size: 0.8em;
+  padding: 0.4em 1.6em;
+  border-radius: 0.3em;
+}
+
+.plot {
+  text-align: justify;
+  margin-top: 0.8em;
+}
+
+.cast {
+  margin-top: 0.8em;
+  text-align: justify;
+}
+
+.msg {
+  margin: 1em 0 0 0;
+  text-align: center;
+  color: white;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    font-size: 14px;
+  }
+  .result__main {
+    grid-template-columns: 1fr;
+  }
+  .result__img {
+    margin: auto;
+    width: auto;
+    max-height: 12em;
+  }
+}
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }/*# sourceMappingURL=main.css.map */
